feat: Implement core interactive game application with Gemini AI integration, FastAPI routes, data models, persistence, and comprehensive testing infrastructure.

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -155,6 +155,10 @@
             <p class="narrative-placeholder">Your adventure awaits...</p>
           </div>
 
+          <button id="btn-narrate" class="btn btn--ghost btn--small" type="button" aria-label="Read narrative aloud">
+            <span aria-hidden="true">&#128264;</span> Narrate
+          </button>
+
           <!-- History Toggle -->
           <button
             id="btn-history"
